# hyleoof

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.ui  README.md  Trunk.toml  config.ron  index.html  package.json  styles.scss
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: cargo.yml  docker.yml  react.yml  release.yml
crates/server/: Cargo.toml
crates/server/src/: app.rs  contract.rs  init.rs  main.rs  prover.rs  task_manager.rs  transaction.rs
crates/ui/: Cargo.toml  Trunk.toml  config.js  config.prod.js  index.html  styles.scss
crates/ui/src/: app.rs  approve.rs  client.rs  contracts.rs  faucet.rs  main.rs  selector.rs  swap.rs  transfer.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs  utils.rs
src/: app.rs  client.rs  contracts.rs  faucet.rs  main.rs  register.rs  text_input.rs  transfer.rs
web-react/: .env  .env.production  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.workspace.ts
web-react/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web-react/src/__tests__/: useHyllar.node.test.tsx
web-react/src/api/: common.ts  constants.ts  createApiRequest.ts
web-react/src/api/endpoints/: approve.ts  faucet.ts  register.ts  swap.ts  transfer.ts
web-react/src/api/indexer/: getContractState.ts
web-react/src/api/node/: getTxEvents.ts  index.ts  sendBlobTx.ts
web-react/src/components/: Buttons.tsx  Copiable.tsx  TokenSelector.tsx
web-react/src/components/tabs/: Approve.tsx  Faucet.tsx  Register.tsx  Swap.tsx  Transfer.tsx
web-react/src/components/ui/: Button.module.css  Button.tsx  Input.module.css  Input.tsx  Notification.css  Notification.tsx  NotificationList.css  NotificationList.tsx  Select.module.css  Select.tsx  SnapToggle.css  SnapToggle.tsx
web-react/src/config/: contract.ts  index.ts
web-react/src/hooks/: MetamaskContext.tsx  NotificationContext.tsx  index.ts  useFetchEvents.ts  useFormSubmission.ts  useHydentity.ts  useHyllar.ts  useInvokeSnap.ts  useMetaMask.ts  useRequest.ts  useRequestSnap.ts  useSendBlobTransaction.ts  useSignBlobs.ts
web-react/src/model/: amm.ts  hyle.ts  mmid.ts  token.ts
web-react/src/utils/: button.ts  camelizeKeys.ts  index.ts  metamask.ts  shortenString.ts  sign.ts
