[package]
name = "hyle-riche"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../hyle/contract-sdk", package="hyle-contract-sdk"  }
hyllar = { path = "../hyle/contracts/hyllar/contract" }

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
futures = "0.3"
yew = { version = "0.21.0", features = ["csr"] }
zxcvbn = "3.1.0"
js-sys = "0.3.70"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
reqwest =  "0.12.8"
anyhow = "1.0.93"
serde_json = "1.0.133"
