[workspace]
members = ["server"]
resolver = "2"

[package]
name = "hyleoof"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contract-sdk", branch = "client_improvements"  }
hyllar= { git = "https://github.com/Hyle-org/hyle.git", package="hyllar", branch = "client_improvements"  }

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
futures = "0.3"
yew = { version = "0.21.0", features = ["csr"] }
zxcvbn = "3.1.0"
js-sys = "0.3.70"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
reqwest =  { version = "0.12.8", features = ["json"] }
anyhow = "1.0.93"
serde_json = "1.0.133"
