[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { path = "../../hyle/contract-sdk", package="hyle-contract-sdk"  }
hyllar = { path = "../../hyle/contracts/hyllar/contract" }
hydentity = { path = "../../hyle/contracts/hydentity/contract" }
hyle = { path = "../../hyle", package = "hyle" }

axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"

risc0-zkvm = { version = "1.1.3" }
borsh = "1.5.3"

