[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/Hyle-org/hyle.git", package="client-sdk", default-features = false, features = ["risc0", "rest"], branch = "main" }
hyllar = { git = "https://github.com/Hyle-org/hyle.git", package="hyllar", features = ["client"], branch = "main"  }
hydentity = { git = "https://github.com/Hyle-org/hyle.git", package="hydentity", features = ["client"], branch = "main"  }
amm = { git = "https://github.com/Hyle-org/hyle.git", package="amm", branch = "main"  }
hyle_contracts = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contracts", branch = "main"  }
bonsai_runner = { git = "https://github.com/Hyle-org/hyle.git", package="bonsai-runner", features = [], branch = "main"  }

# sdk = { path = "../../../hyle3/contract-sdk", package="hyle-contract-sdk"}
# hyllar = { path = "../../../hyle3/contracts/hyllar/contract", package="hyllar" }
# hydentity = { path = "../../../hyle3/contracts/hydentity/contract", package="hydentity" }
# amm = { path = "../../../hyle3/contracts/amm/contract", package="amm" }
# hyle = { path = "../../../hyle3", package="hyle" }

axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"

risc0-zkvm = { version = "1.1.3", features = ["prove"] }
borsh = "1.5.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }

