[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
# sdk = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contract-sdk", features = ["tracing"], branch = "main" }
# client-sdk = { git = "https://github.com/Hyle-org/hyle.git", package="client-sdk", default-features = false, features = ["risc0", "rest"], branch = "main" }
# hyllar = { git = "https://github.com/Hyle-org/hyle.git", package="hyllar", features = ["client"], branch = "main"  }
# hydentity = { git = "https://github.com/Hyle-org/hyle.git", package="hydentity", features = ["client"], branch = "main"  }
# amm = { git = "https://github.com/Hyle-org/hyle.git", package="amm", features = ["client"], branch = "main"  }
# hyle_contracts = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contracts", branch = "main"  }
# bonsai_runner = { git = "https://github.com/Hyle-org/hyle.git", package="bonsai-runner", features = [], branch = "main"  }
# hyle = { git = "https://github.com/Hyle-org/hyle.git", package="hyle", features = [], branch = "main"  }

hyle_metamask = { path = "/home/bertrand/workspace/hackathons/metamask-identity/metamask-contract/contract", package="contract-identity", features = ["client"] }

risc0-zkvm = { version = "1.2.2", features = ["prove"] }

sdk = { path = "/home/bertrand/workspace/hyle2/crates/contract-sdk", package="hyle-contract-sdk", features = ["tracing"] }
client-sdk = { path = "/home/bertrand/workspace/hyle2/crates/client-sdk", package="client-sdk", default-features = false, features = ["risc0", "rest"] }
hyllar = { path = "/home/bertrand/workspace/hyle2/crates/contracts/hyllar", package="hyllar", features = ["client"] }
hydentity = { path = "/home/bertrand/workspace/hyle2/crates/contracts/hydentity", package="hydentity", features = ["client"]  }
amm = { path = "/home/bertrand/workspace/hyle2/crates/contracts/amm", package="amm", features = ["client"]  }
hyle_contracts = { path = "/home/bertrand/workspace/hyle2/crates/contracts", package="hyle-contracts"  }
bonsai_runner = { path = "/home/bertrand/workspace/hyle2/crates/bonsai-runner", package="bonsai-runner", features = [] }
hyle = { path = "/home/bertrand/workspace/hyle2", package="hyle", features = []  }

axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"

borsh = "1.5.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = "4.5.28"

