[package]
name = "ui"
version = { workspace = true }
edition = { workspace = true }
# license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
sdk = { git = "https://github.com/Hyle-org/hyle.git", package="hyle-contract-sdk", branch = "main"  }
hyllar= { git = "https://github.com/Hyle-org/hyle.git", package="hyllar", branch = "main"  }

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
futures = "0.3"
yew = { version = "0.21.0", features = ["csr"] }
zxcvbn = "3.1.0"
js-sys = "0.3.70"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent","HtmlSelectElement"] }
wasm-bindgen = "0.2"
reqwest =  { version = "0.12.8", features = ["json"] }
anyhow = "1.0.93"
serde_json = "1.0.134"
